fixed responsiveness on mobile

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -64,9 +64,10 @@ body {
     display: block;
     position: absolute;
     width: 80%;
-    height: 80%;
+    height: 90%;
+    margin-top: min(60px);
     left: 50%;
-    top: 60%;
+    top: 50%;
     overflow-x: scroll;
     transform: translate(-50%, -50%);
     .grid {
@@ -78,8 +79,8 @@ body {
         top: 50%;
         display: grid;
         grid-template: 
-            repeat(8, minmax(calc(100vh/24), calc(100vh/14))) / 
-            repeat(16, minmax(calc(100vh/24), calc(100vh/14)));
+            repeat(8, minmax(64px, calc(100vh/14))) / 
+            repeat(16, minmax(32px, calc(100vh/14)));
         grid-gap: 8px;
         transform: translate(-50%, -50%);
     }
